k8s/kong/kong-lb-healthz-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-lb-healthz
  namespace: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong-lb-healthz
  template:
    metadata:
      labels:
        app: kong-lb-healthz
    spec:
      containers:
        - name: http-echo
          image: hashicorp/http-echo:1.0.0
          args:
            - -text=ok
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: kong-lb-healthz
  namespace: kong
spec:
  selector:
    app: kong-lb-healthz
  ports:
    - name: http
      port: 80
      targetPort: 5678
