k8s/kong/api-moraes-lat-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-moraes-lat-route
  namespace: default
spec:
  hostnames:
    - api.moraes.lat
  parentRefs:
    - kind: Gateway
      name: shared-kong-gateway
      namespace: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hello-world-api
          port: 80
