k8s/kong/kong-lb-healthz-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kong-lb-healthz-route
  namespace: kong
spec:
  parentRefs:
    - name: shared-kong-gateway
      namespace: kong
  rules:
    - matches:
        - path:
            type: Exact
            value: /lb-healthz
      backendRefs:
        - name: kong-lb-healthz
          port: 80
