k8s/kong/moraes-lat-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: moraes-lat-route
  namespace: kong
spec:
  parentRefs:
    - name: moraes-lat-gateway
      sectionName: app-https
  hostnames:
    - moraes.lat
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kong-gateway-proxy
          port: 80
